--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "start": "node dist/server/entry.mjs",
     "preview": "astro preview",
     "astro": "astro",
-    "postbuild": "pagefind --site dist/client"
+    "postbuild": "pagefind --site dist"
   },
   "dependencies": {
     "@astrojs/mdx": "^4.3.0",
+    "@astrojs/netlify": "^6.5.1",
     "@astrojs/node": "^9.3.0",
     "@astrojs/sitemap": "^3.4.1",
     "@iconify-json/lucide": "^1.2.20",
