--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ecliptic-eclipse",
+  "name": "spectre-blog",
   "type": "module",
   "version": "1.0.2",
   "packageManager": "pnpm@9.15.0",
